fix: api basics

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
+    "http-errors": "^2.0.0",
     "icons-react": "^3.7.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
