--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
     "gsap": "^3.13.0",
+    "gsap-trial": "^3.13.0",
     "http-errors": "^2.0.0",
     "icons-react": "^3.7.1",
     "js-cookie": "^3.0.5",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "next": "15.3.4",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
