--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "erp-elevate",
-  "version": "1.0.0",
+  "name": "teste-erp-elevate",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -40,12 +40,12 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
-    "next": "15.3.4",
+    "next": "15.4.6",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "19.1.1",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
@@ -60,9 +60,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
