--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "gsap-trial": "^3.13.0",
     "http-errors": "^2.0.0",
@@ -51,6 +52,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "three": "^0.179.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.75"
   },
   "devDependencies": {
