--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
-    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "gsap-trial": "^3.13.0",
     "http-errors": "^2.0.0",
@@ -42,6 +41,7 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
@@ -51,7 +51,6 @@
     "react-hook-form": "^7.60.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.179.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.75"
   },
