--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "gsap-trial": "^3.13.0",
     "http-errors": "^2.0.0",
@@ -49,6 +50,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
+    "simplex-noise": "^4.0.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
