--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.1",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.60.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.6",
