--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "motion": "^12.23.12",
-    "next": "15.4.6",
+    "next": "^16.1.1",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
-    "react": "19.1.1",
+    "react": "^19.2.3",
     "react-day-picker": "^9.8.0",
-    "react-dom": "19.1.1",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.6",
