--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
+    "recharts": "^2.15.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
