--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "erp-elevate",
   "version": "2.0.0",
   "private": true,
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --webpack",
