--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "uuid": "^11.1.0",
     "zod": "^3.25.75"
   },
+  "optionalDependencies": {
+    "lightningcss-linux-x64-gnu": "^1.30.2"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
